--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+opencv-python-headless
+youtube_search_python==1.4.9
+youtube_search
 future
 emoji
 lxml
 wget
 gtts
 beautifulsoup4
-requests
-python-telegram-bot==20.0a0
-SQLAlchemy==1.4.36
+requests==2.27.1
+telegram==0.0.1
+python-telegram-bot==13.11
+sqlalchemy==1.4.36
 psycopg2-binary
 feedparser
 faker
@@ -20,19 +24,18 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp
+aiohttp>=2.2.5
 Pillow
 CurrencyConverter
-googletrans==4.0.0rc1
-google-trans-new
+googletrans==4.0.0-rc1
+google-trans-new==1.1.9
 jikanpy
-speedtest-cli
-coffeehouse
+coffeehouse==2.2.6
 regex
 bleach
 wikipedia
-markdown2
-telethon
+markdown2>=2.4.0
+telethon==1.24.0
 telegraph
 heroku3
 spamwatch
@@ -43,16 +46,13 @@ ujson
 pretty_errors
 pygithub
 TgCrypto
-pyrogram==1.4.16
+Pyrogram
 PyDictionary
-git+https://github.com/Sorrybabe/downloader
-youtube_search_python==1.4.9
-youtube_search
 lyrics_extractor
 asyncio
 cloudscraper
-dateparser
-pymongo
+dateparser==1.1.1
+pymongo==4.1.1
 dnspython
 secureme
 apscheduler
@@ -69,7 +69,6 @@ jikanpy
 tswift
 python-arq
 envparse
-#profanity (Credits to Julia)
 better_profanity
 textblob 
 nudepy
@@ -77,11 +76,10 @@ nekos.py
 motor
 gpytranslate
 fontTools
-opencv-python-headless
-odmantic
-tzlocal
+tzlocal==4.2
 pendulum
 fuzzysearch
 img2pdf
 multicolorcaptcha
-git+https://github.com/python-telegram-bot/ptbcontrib.git
+loguru
+yt-dlp
